--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Page Title</title>
     </head>
     <body>
-        <h1>привет!</h1>
+        <h1>My first Heading</h1>
+        <p>My First paragraph.</p>
+
+        <h1>This is heading 1</h1>
+        <h2>This is heading 2</h2>
+        <h3>This is heading 3</h3>
+        <h4>This is heading 4</h4>
+        <h5>This is heading 5</h5>
+        <h6>This is heading 6</h6>
+
+        <p>This is a paragraph.</p>
+        <p>This is another paragraph.</p>
+
+        <a href="https://www.w3schools.com/">This is a link for google </a>
+
+        <img src="w3schools.jpg" alt="w3schools.com" width="104" height="142" />
     </body>
 </html>
