--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
         <a href="https://www.w3schools.com/">This is a link for google </a>
 
         <img src="w3schools.jpg" alt="w3schools.com" width="104" height="142" />
+        <h2>The title attribute</h2>
+        <p title="I'm a tooltip">
+            Mouse over this paragraph, to display the title attribute as a
+            tooltip.
+        </p>
     </body>
 </html>
