--- a/index.html
+++ b/index.html
@@ -4,29 +4,93 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Page Title</title>
+        <title>My First HTML</title>
     </head>
     <body>
         <h1>My first Heading</h1>
         <p>My First paragraph.</p>
-
+        <!-------------------Заголовки в HTML--------------------------------------->
         <h1>This is heading 1</h1>
         <h2>This is heading 2</h2>
         <h3>This is heading 3</h3>
         <h4>This is heading 4</h4>
         <h5>This is heading 5</h5>
         <h6>This is heading 6</h6>
-
+        <!-------------------HTML абзаци HTML--------------------------------------->
         <p>This is a paragraph.</p>
         <p>This is another paragraph.</p>
-
+        <!-------------------Посилання--------------------------------------->
         <a href="https://www.w3schools.com/">This is a link for google </a>
-
+        <!-------------------Зображення HTML--------------------------------------->
         <img src="w3schools.jpg" alt="w3schools.com" width="104" height="142" />
+        <!-------------------Вкладені елементи HTML--------------------------------------->
+        <h1>My first Heading</h1>
+        <p>My first paragraph.</p>
+        <!-------------------The title Attribute--------------------------------------->
         <h2>The title attribute</h2>
         <p title="I'm a tooltip">
             Mouse over this paragraph, to display the title attribute as a
             tooltip.
         </p>
+
+        <!-------------------The href Attribute--------------------------------------->
+        <a href="https://www.w3schools.com">This is a link</a>
+
+        <!-------------------Горизонтальні лінії HTML--------------------------------------->
+        <h1>This is heading 1</h1>
+        <p>This is some text.</p>
+        <hr />
+
+        <h2>This is heading 2</h2>
+        <p>This is some other text.</p>
+        <hr />
+
+        <h3>This is heading 3</h3>
+        <p>This is some other text.</p>
+        <hr />
+        <!-------------------HTML-абзаци--------------------------------------->
+        <p>This is a paragraph.</p>
+        <p>This is a paragraph.</p>
+        <p>This is a paragraph.</p>
+
+        <!-------------------Переходи HTML-рядки--------------------------------------->
+        <br>This is <br>a paragraph</br>with line breaks</p>
+        
+  <!-------------------Елементи HTML <pre>--------------------------------------->
+
+    <p>The pre tag preserves both spaces and line breaks:</p>
+        <pre>
+My Bonnie lies over the ocean.
+
+My Bonnie lies over the sea.
+
+My Bonnie lies over the ocean.
+
+Oh, bring back my Bonnie to me.
+
+</pre>
+
+<!-------------------HTML стилі--------------------------------------->
+<p>I am normal</p>
+<p style="color:lime;">I am lime</p>
+<p style="color:blue">I am blue</p>
+<p style="font-size:40px;color:rgb(0, 0, 0)">I am black big</p>
+
+<!-------------------HTML Text Color--------------------------------------->
+<h1 style="color:blue;">This is a heading</h1>
+<p style="color:red;">This is paragraph</p>
+
+<!-------------------HTML шрифти--------------------------------------->
+<h1 style="font-family:verdana;">This is a heading</h1>
+<p style="font-family:courier;">This is a paragraph.</p>
     </body>
 </html>
+
+<!---------------------Розмір тексту HTML-------------------------------->
+<h1 style="font-size:300%;">This is a heading</h1>
+<p style="font-size:160%;">This is a paragraph.</p>
+
+<!---------------------Вирівнювання тексту HTML-------------------------------->
+
+<h1 style="text-align:center;">Centered Heading</h1>
+<p style="text-align:center;">Centered paragraph.</p>
