--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <p>This is a paragraph.</p>
         <p>This is another paragraph.</p>
         <!-------------------Посилання--------------------------------------->
-        <a href="https://www.w3schools.com/">This is a link for google </a>
+        <a href="https://www.w3schools.com/">This is a link for google </a></br>
         <!-------------------Зображення HTML--------------------------------------->
-        <img src="w3schools.jpg" alt="w3schools.com" width="104" height="142" />
+        <img src="/photo/Flag_of_Ukraine.svg" alt="w3schools.com" width="200" height="142" />
         <!-------------------Вкладені елементи HTML--------------------------------------->
         <h1>My first Heading</h1>
         <p>My first paragraph.</p>
