--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-------------------Посилання--------------------------------------->
         <a href="https://www.w3schools.com/">This is a link for google </a></br>
         <!-------------------Зображення HTML--------------------------------------->
-        <img src="/photo/flag.svg" alt="w3schools.com" width="200" height="142" />
+        <img src="./photo/flag.jpg" alt="w3schools.com" width="200" height="142" />
         <!-------------------Вкладені елементи HTML--------------------------------------->
         <h1>My first Heading</h1>
         <p>My first paragraph.</p>
